--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,13 @@
 [theme]
-base = "dark"
-primaryColor = "#667eea"
-backgroundColor = "#0e1117"
-secondaryBackgroundColor = "#262730"
-textColor = "#ffffff"
+base = "light"
+primaryColor = "#4F46E5"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F9FAFB"
+textColor = "#1F2937"
+
+[client]
+toolbarMode = "minimal"
+
+[server]
+enableCORS = true
+enableXsrfProtection = true
