--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit>=1.28.0
-pandas>=1.5.0
-sqlite3
-bcrypt>=4.0.0
-validators>=0.20.0
+pandas>=2.0.0
+plotly>=5.17.0
 python-dotenv>=1.0.0
+pymysql>=1.1.0
